card issue code alignment

--- a/themes/custom/athena/assets/styles/modules/_shorttermcourses.scss
+++ b/themes/custom/athena/assets/styles/modules/_shorttermcourses.scss
@@ -457,8 +457,9 @@
     @media screen and (max-width: 767px) {
       float: none;
       display: inline-block;
+      width: 84% !important
 
-      width: 84% !important &:first-child {
+      &:first-child {
         margin: 0 0 20px 24px;
       }
     }
